crates/ddlog-syntax/tests/inline/fail/double_comma_function_arg.rast
ROOT@0..41
  COMMENT@0..12 "// kind:item"
  WHITESPACE@12..13 "\n"
  ITEM@13..41
    FUNC_DEF@13..41
      MODIFIERS@13..13
      FUNCTION@13..21 "function"
      WHITESPACE@21..22 " "
      FUNC_NAME@22..25
        IDENT@22..25 "foo"
      FUNC_ARGS@25..37
        L_PAREN@25..26 "("
        FUNC_ARG@26..34
          IDENT@26..29 "bar"
          COLON@29..30 ":"
          WHITESPACE@30..31 " "
          IDENT@31..34 "Baz"
        COMMA@34..35 ","
        COMMA@35..36 ","
        R_PAREN@36..37 ")"
      WHITESPACE@37..38 " "
      BLOCK@38..40
        L_CURLY@38..39 "{"
        R_CURLY@39..40 "}"
      WHITESPACE@40..41 "\n"
--
Error: got multiple commas between function arguments
   ,-[inline/fail/double_comma_function_arg.dl:2:23]
   |
 2 | function foo(bar: Baz,,) {}
   :                       |  
   :                       `-- help: remove this comma
---'
--
// kind:item
function foo(bar: Baz,,) {}

